[gd_scene load_steps=3 format=3 uid="uid://cg8bvxp6ju6vt"]

[ext_resource type="Script" path="res://effect_selection/effect_selection.gd" id="1_ebc3k"]
[ext_resource type="PackedScene" uid="uid://b72whg3ckcjsc" path="res://effect_selection/global_resources/player.tscn" id="2_7ru2u"]

[node name="EffectSelection" type="Node2D"]
script = ExtResource("1_ebc3k")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(582, 335)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 37.0
offset_top = 35.0
offset_right = 479.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 60
text = "Effects Demos"

[node name="Downfall" type="Button" parent="CanvasLayer"]
offset_left = 51.0
offset_top = 180.0
offset_right = 326.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 30
text = "Downfall Effect"

[node name="Fog" type="Button" parent="CanvasLayer"]
offset_left = 52.0
offset_top = 271.0
offset_right = 324.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 30
text = "Fog Effect"

[node name="Glow" type="Button" parent="CanvasLayer"]
offset_left = 55.0
offset_top = 370.0
offset_right = 317.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 30
text = "Glow Effect"

[node name="Pixellation" type="Button" parent="CanvasLayer"]
offset_left = 59.0
offset_top = 471.0
offset_right = 321.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 30
text = "Pixelation Effect"

[node name="Texture Splatting" type="Button" parent="CanvasLayer"]
offset_left = 386.0
offset_top = 180.0
offset_right = 672.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 30
text = "Texture Splatting"

[node name="Water" type="Button" parent="CanvasLayer"]
offset_left = 391.0
offset_top = 278.0
offset_right = 670.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 30
text = "Water Effect"

[node name="Wind" type="Button" parent="CanvasLayer"]
offset_left = 390.0
offset_top = 375.0
offset_right = 670.0
offset_bottom = 425.0
theme_override_font_sizes/font_size = 30
text = "Wind Effect"

[node name="Footprints" type="Button" parent="CanvasLayer"]
offset_left = 390.0
offset_top = 471.0
offset_right = 670.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 30
text = "Footprints Effect"

[node name="Player" parent="CanvasLayer" instance=ExtResource("2_7ru2u")]

[connection signal="pressed" from="CanvasLayer/Downfall" to="." method="_on_downfall_pressed"]
[connection signal="pressed" from="CanvasLayer/Fog" to="." method="_on_fog_pressed"]
[connection signal="pressed" from="CanvasLayer/Glow" to="." method="_on_glow_pressed"]
[connection signal="pressed" from="CanvasLayer/Pixellation" to="." method="_on_pixellation_pressed"]
[connection signal="pressed" from="CanvasLayer/Texture Splatting" to="." method="_on_texture_splatting_pressed"]
[connection signal="pressed" from="CanvasLayer/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="CanvasLayer/Wind" to="." method="_on_wind_pressed"]
[connection signal="pressed" from="CanvasLayer/Footprints" to="." method="_on_footprints_pressed"]
